k8s/hackaton.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-deployment
  labels:
    app: hackaton-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackaton-deployment
  template:
    metadata:
      labels:
        app: hackaton-deployment
    spec:
      containers:
        - name: c-hackaton-deployment
          image: nathancordeiro0/hackaton:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: hackaton-service
  labels:
    app: hackaton-service
spec:
  type: ClusterIP
  selector:
    app: hackaton-deployment
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackaton-ingress
  labels:
    app: hackaton-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "hackaton.local.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hackaton-service
                port:
                  number: 80
